@@ -1,3 +1,9 @@
+2002-10-04  Darin Adler  <darin@apple.com>
+
+        * kwq/KWQKURL.mm: (KURL::parse): Fix code that adds "//" to file URLs.
+	The code was including the extra slashes as part of the path, which they are not.
+	Verified with the tests in the Tests directory.
+
 2002-10-03  Darin Adler  <darin@apple.com>
 
 	- fixed 3065730 -- Crash loading "My T-Mobile" page (in khtml::Decoder::decode)
